--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: fit-content;
+    height: 100vh;
 }
 
 h2, h3 {
@@ -33,11 +33,11 @@ h2, h3 {
 }
 
 h1 {
-    font-size: 2em;
+    font-size: 3em;
 }
 
 h2 {
-    font-size: .8em;
+    font-size: 1.1em;
 }
 
 p {
@@ -48,19 +48,17 @@ p {
 .container {
     background-color: var(--White);
     width: 90%;
-    max-width: 25rem;
+    max-width: 36rem;
     height: fit-content;
     border-radius: 10px;
     padding: 1.5rem;
-    box-shadow: 1px 10px 30px hsla(0, 0%, 30%, 0.3);
-    margin-top: 5rem;
-    margin-bottom: 4rem;
+    box-shadow: 1px 10px 30px hsla(0, 0%, 30%, 0.1);
 }
 
 .header {
     display: flex;
     gap: 1rem;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 .header img {
@@ -69,7 +67,9 @@ p {
 
 .question {
     display: flex;
+    align-items: center;
     position: relative;
+    margin-bottom: 1rem;
     height: 3rem;
     padding-right: 3rem;;
     cursor: pointer;
@@ -94,7 +94,7 @@ p {
 .question img {
     position: absolute;
     right: 0;
-    width: 1rem;
+    width: 2rem;
 }
 
 .minus-icon {
@@ -102,22 +102,26 @@ p {
 }
 
 .answer {
-    margin-bottom: 0.5rem;
+    margin-bottom: 1.5rem;
     max-height: 0;
     overflow: hidden;
     line-height: 1.5rem;
-    transition: max-height .3s ease;
+    transition: max-height .5s ease;
     border-bottom: 1px solid var(--Light-pink);
 }
 
-@media (min-width: 600px) {
+@media (min-width: 900px) {
 
     body {
         background-image: url(assets/images/background-pattern-desktop.svg);
     }
 
     h1 {
-        font-size: 2em;
+        font-size: 3em;
+    }
+
+    h2 {
+        font-size: 1.1em;
     }
     
     .question {
@@ -125,6 +129,6 @@ p {
     }
 
     .container {
-        padding: 1.5rem;
+        padding: 2rem;
     }
 }
